--- a/12 - Key Sequence Detection/index-START.html
+++ b/12 - Key Sequence Detection/index-START.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Key Detection</title>
+  <h2>Secret code = sokol</h2>
   <script type="text/javascript" src="http://www.cornify.com/js/cornify.js"></script>
 </head>
 <body>
